--- a/templates/account.html
+++ b/templates/account.html
@@ -5,9 +5,9 @@
     <title>Title</title>
     <form action="" method="post">
         {% if full_name %}
-        <p>{{full_name}}, привет :)<br>
-            Твой логин:  {{lgn}}<br>
-            Твой пароль: {{psswrd}}
+        <p>{{full_name}}, здарова<br>
+            Логин:  {{lgn}}<br>
+            Пароль: {{psswrd}}
         </p>
         {% endif %}
 
